--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "micromatch": "^2.3.11"
   },
   "devDependencies": {
+    "app-module-path": "^1.1.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
     "doctoc": "^1.0.0",
@@ -42,6 +43,6 @@
     "eslint-config-gemini-testing": "^2.2.0",
     "mocha": "^2.4.5",
     "proxyquire": "^1.7.3",
-    "sinon": "^1.17.2"
+    "sinon": "^2.2.0"
   }
 }
