--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: node_js
-
-matrix:
-  include:
-    - node_js: "4"
-      env: COVERALLS=1
-    - node_js: "6"
-
-after_success:
-  - if [ "$COVERALLS" = "1" ]; then npm run coveralls; fi
+node_js:
+- '6'
+- '8'
+script:
+- npm test
