--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "gemini-configparser": "^1.0.0",
     "glob-extra": "^2.0.0",
     "lodash": "^4.15.0",
-    "micromatch": "^2.3.11"
+    "looks-same": "^3.2.1",
+    "micromatch": "^2.3.11",
+    "png-img": "^2.1.1",
+    "temp": "^0.8.3"
   },
   "devDependencies": {
     "app-module-path": "^1.1.0",
