--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "core"
   ],
   "dependencies": {
+    "aliasify": "^1.9.0",
     "bluebird": "^3.4.6",
+    "browserify": "^13.3.0",
     "debug": "^2.2.0",
     "gemini-configparser": "^1.0.0",
     "glob-extra": "^3.0.0",
@@ -34,7 +36,9 @@
     "looks-same": "^3.2.1",
     "micromatch": "^2.3.11",
     "png-img": "^2.1.1",
-    "temp": "^0.8.3"
+    "temp": "^0.8.3",
+    "uglify-js": "^3.3.9",
+    "uglifyify": "^3.0.4"
   },
   "devDependencies": {
     "app-module-path": "^1.1.0",
@@ -45,7 +49,6 @@
     "eslint-config-gemini-testing": "^2.2.0",
     "mocha": "^2.4.5",
     "proxyquire": "^1.7.3",
-    "sinon": "^2.2.0",
-    "uglify-js": "^3.3.5"
+    "sinon": "^2.2.0"
   }
 }
