chore: use linked list instead of array for queue

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aliasify": "^1.9.0",
     "bluebird": "^3.4.6",
     "browserify": "^13.3.0",
+    "collections": "5.1.5",
     "debug": "^2.2.0",
     "gemini-configparser": "^1.0.0",
     "glob-extra": "^3.0.0",
