--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "looks-same": "^4.0.0",
     "micromatch": "^2.3.11",
     "png-img": "^2.1.1",
+    "sizzle": "^2.3.3",
     "temp": "^0.8.3",
     "uglify-js": "^2.8.29",
     "uglifyify": "^3.0.4"
