--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sizzle": "^2.3.3",
     "temp": "^0.8.3",
     "uglify-js": "^2.8.29",
-    "uglifyify": "^3.0.4"
+    "uglifyify": "^3.0.4",
+    "yallist": "^3.0.3"
   },
   "devDependencies": {
     "app-module-path": "^1.1.0",
