fix: do not store diff all pixels

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gemini-configparser": "^1.0.0",
     "glob-extra": "^4.0.0",
     "lodash": "^4.15.0",
-    "looks-same": "^5.0.1",
+    "looks-same": "gemini-testing/looks-same#fix-memory",
     "micromatch": "^2.3.11",
     "png-img": "^2.1.1",
     "sizzle": "^2.3.3",
