--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "looks-same": "^7.3.0",
     "micromatch": "^4.0.2",
     "png-img": "^3.3.4",
+    "pngjs": "^6.0.0",
     "sharp": "^0.29.3",
     "sizzle": "^2.3.3",
     "temp": "^0.8.3",
