--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^8.10.66",
     "app-module-path": "^1.1.0",
     "chai": "^3.4.1",
