--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "gemini-configparser": "^1.0.0",
     "glob-extra": "^5.0.1",
     "lodash": "^4.17.15",
-    "looks-same": "^7.3.0",
+    "looks-same": "github:gemini-testing/looks-same#FEI-17919",
     "micromatch": "^4.0.2",
-    "png-img": "^3.3.6",
+    "png-img": "github:gemini-testing/png-img#FEI-17920",
     "sizzle": "^2.3.3",
     "temp": "^0.8.3",
     "uglify-js": "^2.8.29",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/bluebird": "^3.5.36",
     "@types/lodash": "^4.14.178",
     "@types/node": "^8.10.66",
     "app-module-path": "^1.1.0",
