--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/bluebird": "^3.5.36",
+    "@types/debug": "^4.1.7",
     "@types/lodash": "^4.14.178",
     "@types/node": "^8.10.66",
+    "@types/webdriverio": "^5.0.0",
+    "@types/yallist": "^4.0.1",
     "app-module-path": "^1.1.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
