--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
     "@types/bluebird": "^3.5.36",
+    "@types/browserify": "^12.0.37",
     "@types/color-diff": "^1.2.1",
     "@types/debug": "^4.1.7",
     "@types/lodash": "^4.14.178",
