--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "bluebird": "^3.4.6",
     "browserify": "^13.3.0",
     "debug": "^2.2.0",
-    "gemini-configparser": "^1.0.0",
+    "gemini-configparser": "github:gemini-testing/configparser#FEI-17917",
     "glob-extra": "^5.0.1",
     "lodash": "^4.17.15",
     "looks-same": "github:gemini-testing/looks-same#FEI-17919",
