chore(sets-builder): rewrite module sets-builder on TS

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "browserify": "^13.3.0",
     "debug": "^2.2.0",
     "gemini-configparser": "github:gemini-testing/configparser#FEI-17917",
-    "glob-extra": "^5.0.1",
+    "glob-extra": "github:gemini-testing/glob-extra#FEI-24748",
     "lodash": "^4.17.15",
     "looks-same": "github:gemini-testing/looks-same#FEI-17919",
     "micromatch": "^4.0.2",
@@ -51,6 +51,7 @@
     "@types/color-diff": "^1.2.1",
     "@types/debug": "^4.1.7",
     "@types/lodash": "^4.14.178",
+    "@types/micromatch": "^4.0.2",
     "@types/node": "^8.10.66",
     "@types/webdriverio": "^5.0.0",
     "@types/yallist": "^4.0.1",
