--- a/lib/browser/client-scripts/tsconfig.json
+++ b/lib/browser/client-scripts/tsconfig.json
@@ -1,14 +1,13 @@
 {
     "extends": "@tsconfig/recommended/tsconfig.json",
     "include": ["**/*"],
-    "exclude": ["lib/browser/client-scripts", "test", "build"],
     "compilerOptions": {
-      "outDir": "build",
+      "target": "ES3",
+      "outDir": "../../../build/lib",
       "types": ["node"],
       "allowJs": true,
-      "checkJs": false,
       "noImplicitReturns": true,
       "noUnusedLocals": true,
       "noUnusedParameters": true
     }
-  }
+}
